Issue IMCMS-483: Improve the text-editor - Fix visible of select box;

--- a/src/main/webapp/imcms/css/imcms-text_editor.css
+++ b/src/main/webapp/imcms/css/imcms-text_editor.css
@@ -317,3 +317,7 @@ input.imcms-editor-content--text {
     padding: 5px;
     cursor: pointer;
 }
+
+.mce-floatpanel {
+    position: absolute !important;
+}
